@@ -8,6 +8,7 @@ Version 2.5.0
 	- check for mk5daemon inactivity
 	- add options to set multicast group/port
 	- color coded output in case of errors
+* Change name of .rpm to vlbi-difxmessage.*.rpm
 
 Version 2.4.0
 ~~~~~~~~~~~~~
